# FZModules

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt  demo.cc
.github/workflows/: cmake-ci.yml
cmake/: FZModulesConfig.cmake.in  probe.cmake
cudastf/: cudastf_api.cc  cudastf_demo.cc  hist_generic.cu  huffman_class.hh  huffman_kernels.cu  ibuffer.hh  lorenzo_1d.cu  proto_lorenzo_1d.cu  spvn_stf.cu
examples/: demo.cc
modules/codec/: codec.hh
modules/codec/fzg/include/: fzg_class.hh  fzg_kernel.hh  fzg_type.h
modules/codec/fzg/src/: fzg_class.cc  fzg_kernel.cu
modules/codec/huffman/include/: cxx_hfbk.h  hfcanon.hh  hfclass.hh  hfword.hh  phf_array.hh
modules/codec/huffman/src/: hfbk.seq.cc  hfbk_impl1.seq.cc  hfbk_impl2.seq.cc  hfbk_internal.seq.cc  hfbuf.inl  hfcanon.seq.cc  hfclass.cc  hfclass.cuhip.inl  hfcodec.cuhip.inl  hfcxx_module.cuhip.inl  libphf.cc
modules/fzg/include/: fzg_class.hh  fzg_kernel.hh
modules/fzg/src/: fzg_class.cc
modules/fzg/src/detail/: fzg_c.cuhip.inl  fzg_x.cuhip.inl
modules/histogram/include/: hist.hh
modules/histogram/src/: hist_generic.cu  hist_generic_seq.cc  histsp.cu  histsp.seq.cc
modules/huffman/include/: hfbk_impl.hh  hfcanon.hh  vis_stat.hh
modules/huffman/src/: hf_est.cc  hfbk.seq.cc  hfbk_impl1.seq.cc  hfbk_internal.seq.cc  hfcanon.seq.cc  hfclass.cc  hfclass.cuhip.inl  hfcodec.cuhip.inl  hfcxx_module.cuhip.inl  libphf.cc  vis_stat.cc  vis_stat.impl.hh
modules/huffman/src/detail/: hfclass.cuhip.inl
modules/lrz/include/: lorenzo.hh  lrz.gpu.hh  lrz.gpu_config.hh
modules/lrz/src/: lrz_c.cu  lrz_x.cu
modules/lrz/src/detail/: zigzag.hh
modules/predictor/: predictor.hh
modules/predictor/lrz/include/: lorenzo.hh  lrz.gpu.hh  lrz.gpu_config.hh
modules/predictor/lrz/src/: lrz_c.cu  lrz_x.cu
modules/predictor/lrz/src/detail/: wave32.cu  zigzag.hh
modules/predictor/spline/include/: spline.hh
modules/predictor/spline/src/: spline3.cu  spline3.inl
modules/spline/include/: spine.hh  spline.hh
modules/spline/src/: spline3.cu  spline3.inl
modules/stat/: stat.hh
modules/stat/extrema/include/: compare.hh
modules/stat/extrema/src/: calc_err.cu  max_err.cu
modules/stat/histogram/include/: hist.hh
modules/stat/histogram/src/: hist_generic.cu  hist_generic_seq.cc  histsp.cu  histsp.seq.cc
modules/stat/spvn/include/: spv.hh
modules/stat/spvn/src/: spvn.cu
pipeline/include/: context.h  fzmod.h  header.h  type.h  typing.hh
pipeline/src/: demo.cuda.cc  driver.cc  libfzmod.cc
portable/include/: busyheader.hh  c_type.h
portable/include/mem/: cxx_array.h  cxx_backends.h  cxx_memobj.h  cxx_sp_cpu.h  cxx_sp_gpu.h
portable/include/utils/: dbg.hh  err.hh  extrema.hh  format.hh  io.hh  it_serial.hh
portable/src/utils/: extrema.cu
tests/: CMakeLists.txt  test_codec_fzg.cpp  test_codec_huffman.cpp  test_config.cpp  test_fileio.cpp  test_hist_gpu.cpp  test_hist_optimizer.cpp  test_hist_seq.cpp
tools/include/: config.hh  err.hh  fzmod_api.hh  timer.hh
tools/include/mem/: buffer.hh  cxx_smart_ptr.h  cxx_sp_gpu.h
tools/src/: extrema.cu
